Improving pattern handling for non-null types
Co-authored-by: Vicente Romero <vromero@openjdk.org>
Reviewed-by: vromero, mcimadamore