@@ -40,16 +40,12 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.stream.IntStream;
 
-import com.sun.tools.javac.code.Flags;
-import com.sun.tools.javac.util.Assert;
 import toolbox.TestRunner;
 import toolbox.ToolBox;
 import toolbox.JavaTask;
 import toolbox.JavacTask;
 import toolbox.Task;
-import toolbox.Task.OutputKind;
 
 public class RuntimeNullChecks extends TestRunner {
     ToolBox tb;
@@ -88,17 +84,6 @@ public class RuntimeNullChecks extends TestRunner {
                     }
                 }
                 """,
-                /*"""
-                class Test {
-                    record R(String x) {}
-                    static void m(Object obj) {
-                        if (obj instanceof R(String! x)) {}  // should not match not throw NPE
-                    }
-                    public static void main(String... args) {
-                        m(new R(null));
-                    }
-                }
-                """,*/
                 """
                 class Test {
                     public static void main(String... args) {
@@ -374,4 +359,66 @@ public class RuntimeNullChecks extends TestRunner {
                     .run(Task.Expect.SUCCESS);
         }
     }
+
+    @Test
+    public void testPatternMatching(Path base) throws Exception {
+        Path src = base.resolve("src");
+        Path classes = base.resolve("classes");
+        tb.writeJavaFiles(src,
+                          """
+                          public class Test {
+                              public static void main(String... args) {
+                                  Box box = new Box(null);
+
+                                  if (!(box instanceof Box(String s1))) {
+                                      throw new AssertionError();
+                                  }
+
+                                  if (box instanceof Box(String! s2)) {
+                                      throw new AssertionError();
+                                  }
+
+                                  switch (box) {
+                                      case Box(String s3) -> {} //OK
+                                      default -> throw new AssertionError();
+                                  }
+
+                                  switch (box) {
+                                      case Box(String! s4) ->
+                                          throw new AssertionError();
+                                      default -> {}
+                                  }
+
+                                  System.out.println("pass");
+                              }
+                              record Box(String str) {}
+                          }
+                          """);
+
+        Files.createDirectories(classes);
+
+        new JavacTask(tb)
+            .options(PREVIEW_OPTIONS)
+            .outdir(classes)
+            .files(tb.findJavaFiles(src))
+            .run(Task.Expect.SUCCESS)
+            .writeAll();
+
+        var out = new JavaTask(tb)
+                .vmOptions("--enable-preview")
+                .classpath(classes.toString())
+                .className("Test")
+                .run()
+                .writeAll()
+                .getOutputLines(Task.OutputKind.STDOUT);
+
+        var expectedOut = List.of("pass");
+
+        if (!Objects.equals(expectedOut, out)) {
+            throw new AssertionError("Incorrect Output, expected: " + expectedOut +
+                                      ", actual: " + out);
+
+        }
+    }
+
 }
